test-cases/negative/test_068_class_redefinition.lay
# negative test: redefining same class
# expected: type checker should catch this

define class Person
  the property name of type String

define class Person
  the property age of type Number


